Jsonwebtoken and Bcrypt functionality added

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,2 +1,3 @@
 PORT = 4000
-MONGO_URI = 'mongodb+srv://shishir:shishir@cluster0.cb7dacx.mongodb.net/test'
+MONGO_URI = 'mongodb+srv://shishir:shishir@cluster0.cb7dacx.mongodb.net/sociopedia'
+JWT_SECRET = "khatarnakPassworddnshdknkjdnf/ldf"
