--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "server": "nodemon backend/server.js",
-    "client": "cd frontend && npm start"
-  },
+    "dev": "nodemon backend/server.js"
+  }, 
   "author": "",
   "license": "ISC",
   "dependencies": {
