--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon backend/server.js"
+    "start": "nodemon backend/server.js"
   }, 
   "author": "",
   "license": "ISC",
