--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "y",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "backend/server.js",
   "engines": {
     "node": "16.18.1"
   },
