--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "version": 2,
     "builds": [
         {
-            "src": "./backend/server.js",
+            "src": "backend/server.js",
             "use": "@vercel/node"
         }
     ],
