--- a/config/config.env
+++ b/config/config.env
@@ -1,3 +1,7 @@
 PORT = 4000
 MONGO_URI = 'mongodb+srv://shishir:shishir@cluster0.cb7dacx.mongodb.net/sociopedia'
 JWT_SECRET = "khatarnakPassworddnshdknkjdnf/ldf"
+CLOUDINARY_NAME="dytxzvzks"
+CLOUDINARY_API_KEY="864579398866285"
+CLOUDINARY_API_SECRET="FOPpJviImaglNax2A8j884LqkmM"
+  
