--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,6 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://sociopedia-one.vercel.app/"
+  "proxy": "http://localhost:4000/"
 
 }
