--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "scripts": {
     "start": "nodemon index.js"
-  }, 
+  },
   "author": "Shishir Bhargav",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.35.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
